<resources>
    <string name="app_name">CardsWithEnglishWords</string>

    <string name="app_to_learn">App To Learn English Words</string>
    <string name="default_state">Default State Screen</string>
    <string name="settings">Settings</string>
    <string name="word">Words</string>
    <string name="all_word">English Words</string>
    <string name="translate"> Translate</string>
    <string name="next"> Next</string>
    <string name="restore"> Restore</string>
    <string name="premium"> Buy Premium</string>
    <string name="cancel"> Cancel</string>
    <string name="no"> No,Thank you</string>
    <string name="buy_subs"> Buy a subscription for $10 per month</string>
    <string name="restore_really"> Do you really want to restore the number of attempts?</string>


    <string name="save"> Save</string>
    <string name="word_add"> Word</string>
    <string name="translation"> Translation</string>

</resources>